--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install",
     "postinstall": "husky install"
@@ -24,7 +24,6 @@
   "devDependencies": {
     "@eslint/config-array": "^0.20.0",
     "@eslint/object-schema": "^2.1.6",
-    "@tailwindcss/cli": "^4.1.7",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -42,9 +41,9 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "postcss": "^8.5.3",
-    "prettier": "^3.1.1",
-    "tailwindcss": "^4.1.7",
-    "tailwindcss-cli": "^0.1.2",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
