--- a/data/projects.json
+++ b/data/projects.json
@@ -3,7 +3,7 @@
     "id": "1",
     "title": "Bluebid",
     "image": "/assets/bluebid-home.png",
-    "description": "This website allows users to register and log in as a user, create auction listings, and bid on items using a credit-based system.",
+    "description": "Bluebid is a bidding website to make bids on items. It allows users to register and log in as a user, create auction listings, and bid on items using a credit-based system.",
     "bigDescription": "The website allows users to register, create auction listings, and bid on items using a credit-based system. The application communicates with an existing API to handle auction-related data. Features: For Registered Users: Registration: Users with a stud.noroff.no email address can register for the platform. Login and Logout: Users can securely log in and out of their accounts. Update Profile: Users can update their avatar to personalize their profile. Credits Management: New users start with 1000 credits. Credits can be earned by selling items and spent by bidding on or purchasing items. Create Listings: Add a title, deadline, description, and media gallery for an auction. Bid on Listings: Place bids on other users' active listings. View Bids: See the bids placed on a specific listing. For Unregistered Users: Search Listings: Browse and search through available auction listings without registering.",
     "link": "https://bluebid.netlify.app"
   },
@@ -11,7 +11,7 @@
     "id": "2",
     "title": "Next Level Goods",
     "image": "/assets/nlg-screenshot.jpg",
-    "description": "A React app that allows users to register and log in, browse and search for items, add items to the cart and proceed to checkout.",
+    "description": "Next Level Goods is an online store made with React that allows users to register and log in, browse and search for items, add items to the cart and proceed to checkout.",
     "bigDescription":"A React app that allows users to register and log in, browse and search for items, add items to the cart and proceed to checkout. This project includes a responsive navigation bar component built with React and TypeScript. The navigation bar features a hamburger menu for mobile screens and a shopping cart icon that dynamically updates the cart item count based on localStorage data. Features: Responsive navigation bar with a hamburger menu. Displays the cart item count from localStorage. Listens for a custom event (cartUpdated) to dynamically update the cart count. Uses styled-components for styling.",
     "link": "https://nextlevelgoods.netlify.app"
   },
@@ -19,7 +19,7 @@
     "id": "3",
     "title": "Holidaze",
     "image": "/assets/holidaze-app.png",
-    "description": "A React app for viewing, booking and creating holiday venues. There are two roles to register as; Regular customer and Venue manager.",
+    "description": "Holidaze is a holiday booking website created with React. It is for viewing, booking and creating holiday venues. Two roles to register as; Regular customer and Venue manager.",
     "bigDescription":"Holidaze is a web app for viewing, booking and creating holiday venues. The application communicates with an existing API to handle the venue data. There are two roles to register as; Regular customer and Venue manager. Features: All users can view a list of newest venues, and search for venues by location, dates to be booked and number of guests. All users can view a specific venue by ID, and see the available dates marked on a calendar. Registration: Users with a 'stud.noroff.no' email address can register for the platform; either as a Customer or a Venue manager. For Regular Customers: Can create bookings at other venues made by venue managers. View their upcoming bookings on their profile page. Edit their profile by updating their avatar image and banner image. Login and Logout: Users can securely log in and out of their accounts. For Venue Managers: Create their own venues. Can update and delete a venue they manage. Can view upcoming bookings at a venue they manage in a table on the specific venue page. Edit their profile by updating their avatar image and banner image. View a list of both their own venues and upcoming bookings on the profile page.Reflections & Areas for Improvement: Holidaze was a large and challenging project that pushed me to grow as a frontend developer. One of the most demanding parts was managing both user roles: regular customer and venue manager. This was something I had never done before, but it turned out to be a valuable learning experience that taught me a lot about user flow, conditional rendering, and data handling. I was highly focused on delivering a high-quality result and spent a lot of time refining the details. Everything from layout, responsiveness, and functionality was carefully fine-tuned to ensure a good user experience. If I had more time, I would have loved to expand the site further by adding more pages such as About and Contact. I also see potential in improving the user functionality – for example, allowing users to search for other users and view their profiles.Because I prioritized doing the most essential features well, I didn't have much time to add bonus features. Still, I'm proud of what I accomplished and how much I learned throughout the process.",
     "link": "https://holidaze25.netlify.app"
   }
