feat: edited json, switched out image and adding content and styling for article

--- a/data/projects.json
+++ b/data/projects.json
@@ -4,8 +4,11 @@
     "title": "Bluebid",
     "image": "/assets/bluebid-home.png",
     "description": "Bluebid is a bidding website to make bids on items. It allows users to register and log in as a user, create auction listings, and bid on items using a credit-based system.",
-    "bigDescription": "The website allows users to register, create auction listings, and bid on items using a credit-based system. The application communicates with an existing API to handle auction-related data. Features: For Registered Users: Registration: Users with a stud.noroff.no email address can register for the platform. Login and Logout: Users can securely log in and out of their accounts. Update Profile: Users can update their avatar to personalize their profile. Credits Management: New users start with 1000 credits. Credits can be earned by selling items and spent by bidding on or purchasing items. Create Listings: Add a title, deadline, description, and media gallery for an auction. Bid on Listings: Place bids on other users' active listings. View Bids: See the bids placed on a specific listing. For Unregistered Users: Search Listings: Browse and search through available auction listings without registering.",
-    "link": "https://bluebid.netlify.app"
+    "bigDescription": "Bluebid is a bidding website to make bids on items. The website allows users to register, create auction listings, and bid on items using a credit-based system. The application communicates with an existing API to handle auction-related data.",
+    "features": "Users with a stud.noroff.no email address can register for the platform, and securely log in and out of their accounts. They can update their avatar to personalize their profile. New users start with 1000 credits, and credits can be earned by selling items and spent by bidding on or purchasing items. Users can add a title, deadline, description, and media gallery for an auction. Users can also place bids on other users' active listings, and see the bids placed on a specific listing. Unregistered users can search for listings, browse and search through available auction listings without registering.",
+    "reflectionsAndImprovements":"",
+    "link": "https://bluebid.netlify.app",
+    "repositoryLink":"https://github.com/TheRegzi/bluebid"
   },
   {
     "id": "2",
