--- a/data/projects.json
+++ b/data/projects.json
@@ -26,7 +26,7 @@
   {
     "id": "3",
     "title": "Holidaze",
-    "image": "/assets/holidaze-app.png",
+    "image": "/assets/holidaze-app.jpg",
     "imageCaption": "The home page of Holidaze.",
     "description": "Holidaze is a holiday booking website created with React. It is for viewing, booking and creating holiday venues. Two roles to register as; Regular customer and Venue manager.",
     "bigDescription":"Holidaze is a holiday booking website created with React, which was the final project exam at my Front-end Development studies at Noroff. It is for viewing, booking and creating holiday venues. The application communicates with an existing API to handle the venue data. There are two roles to register as; Regular customer and Venue manager.",
