--- a/data/projects.json
+++ b/data/projects.json
@@ -46,5 +46,17 @@
     "reflectionsAndImprovements": "I had never used Next.js before, so this was a great learning experience for me. I learned how to use it and it got easier and easier, as it is quite similar to React. There are also many new aspects to think about when forecasting weather, like the different units of measurement for temperature, wind speed, and precipitation. The app can be further improved by adding more features like a favorites list, so you can save your favorite places to easily access them later. It can also be improved by adding more detailed weather information, like humidity and UV index, and add a map over a specific place.",
     "link": "https://weather-wise-sigma-one.vercel.app",
     "repositoryLink":"https://github.com/TheRegzi/weather-wise"
+  },
+    {
+    "id": "5",
+    "title": "Community Science Museum",
+    "image": "/assets/csm-home.jpg",
+    "imageCaption": "The home page of Community Science Museum.",
+    "description": "Community Science Museum was one of my first projects at my front end studies. It is for viewing and reading about the museum.",
+    "bigDescription":"This project aims to design and develop a modern, accessible, and responsive web presence for an interactive museum called the Community Science Museum. The target audience is primary and middle school children and families. The main goal is to excite people enough to come visit the museum. The theme should not be too childish, but still appeal to children.",
+    "features": "It features an Explore page which appeals to kids, teachers and researchers. Exhibition Spaces gives information about the current exhibitions at the museum. Special Events is about which events are coming soon. Additional pages are Visit and Get involved, which aims to make people come visit and contribute.",
+    "reflectionsAndImprovements": "As it was one of my first projects at my front end studies, I learned a lot about HTML and CSS. I also learned how to use Figma to design the website before coding it. The website could by improved by adding more images and animations, making it a more modern design.",
+    "link": "https://theregzi.github.io/Semester-Project-1/",
+    "repositoryLink":"https://github.com/TheRegzi/Semester-Project-1"
   }
 ]
