--- a/data/projects.json
+++ b/data/projects.json
@@ -40,7 +40,7 @@
     "title": "Weather Wise",
     "image": "/assets/weater-wise.png",
     "imageCaption": "The home page of Weather Wise.",
-    "description": "Weather wise is a weather app created with Next.js. It is for viewing the weather and searching for places to see the weather forecast for 10 days ahead.",
+    "description": "Weather wise is a weather app created with Next.js. It is for viewing temperatures and weather type and searching for places to see the weather forecast for 10 days ahead.",
     "bigDescription":"Weather wise is a weather app I made on my own by using Next.js and Tailwind CSS. It uses a free API from Open Meteo, so you can search for all the places you want and get different search results, that takes you to the specific weather page when clicking on a link. It displays the forecasted weather of ten days for each specific weather page.",
     "features": "All users can view and search for places to see the weather forecast for 10 days ahead. It has a responsive design, so it works well on both desktop and mobile devices. It uses Next.js for server-side rendering and Tailwind CSS for styling.",
     "reflectionsAndImprovements": "I had never used Next.js before, so this was a great learning experience for me. I learned how to use it and it got easier and easier, as it is quite similar to React. There are also many new aspects to think about when forecasting weather, like the different units of measurement for temperature, wind speed, and precipitation. The app can be further improved by adding more features like a favorites list, so you can save your favorite places to easily access them later. It can also be improved by adding more detailed weather information, like humidity and UV index, and add a map over a specific place.",
@@ -55,8 +55,20 @@
     "description": "Community Science Museum was one of my first projects at my front end studies. It is for viewing and reading about the museum, making families excited to visit it.",
     "bigDescription":"This project aims to design and develop a modern, accessible, and responsive web presence for an interactive museum called the Community Science Museum. The target audience is primary and middle school children and families. The main goal is to excite people enough to come visit the museum. The theme should not be too childish, but still appeal to children.",
     "features": "It features an Explore page which appeals to kids, teachers and researchers. Exhibition Spaces gives information about the current exhibitions at the museum. Special Events is about which events are coming soon. Additional pages are Visit and Get involved, which aims to make people come visit and contribute.",
-    "reflectionsAndImprovements": "As it was one of my first projects at my front end studies, I learned a lot about HTML and CSS. I also learned how to use Figma to design the website before coding it. The website could by improved by adding more images and animations, making it a more modern design.",
+    "reflectionsAndImprovements": "As it was one of my first projects at my front end studies, I learned a lot about HTML and CSS. I also learned how to use Figma to design the website before coding it. The website could be improved by adding more images and animations, making it a more modern design.",
     "link": "https://theregzi.github.io/Semester-Project-1/",
     "repositoryLink":"https://github.com/TheRegzi/Semester-Project-1"
+  },
+      {
+    "id": "6",
+    "title": "Rainy Days",
+    "image": "/assets/rainy-days.png",
+    "imageCaption": "The home page of Rainy Days.",
+    "description": "Rainy Days was my first project at my front end studies. It is an online store that sells jackets, where all users can add products to the cart, and the total is calculated at the checkout.",
+    "bigDescription":"Rainy Days was my first project at my front end studies. First, it was made entirely by HTML and CSS, but later in the course, we used the same web site and added JavaScript to it, to create more dynamic functionality. It is an online store that sells jackets, where all users can add products to the cart, and the total is calculated at the checkout.",
+    "features": "It features a responsive design, so it works well on both desktop and mobile devices. It has a navigation bar with links to the home page with all products, an about us page and a contact page. The products are displayed in a grid layout, with images, names, prices, and a button to add them to the cart at the specific product page.",
+    "reflectionsAndImprovements": "As it was one of my first projects at my front end studies, I learned a lot about HTML, CSS and JavaScript. I also learned how to use Figma to design the website before coding it. The website could be improved by improving the design, the grid layout, and removing space between the products, and also elements on each product card. It could also benefit from adding a search function, so users can easily find the products they are looking for.",
+    "link": "https://rainy-days-javascript1-ca.netlify.app",
+    "repositoryLink":"https://github.com/TheRegzi/Rainy-Days-Javascript-1-CA"
   }
 ]
